Tweak design, attempt to fix scroll indicator on X/XS/XS Max

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 					<a href="#" class="nav-item">T-Shirts</a>
 				</div>
 				<div class="intro-graphic">
-					<div class="hamilton-cutout">
+					<div class="cutout-container">
+						<div class="hamilton-cutout">
+						</div>
+						<span class="hamilton-title">
+							Hamilton
+						</span>
 					</div>
-					<span class="hamilton-title">
-						Hamilton
-					</span>
 					<div class="scroll-hint-up">
 						&#8963;
 					</div>
