--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
 					<div class="nav-item nav-item-focus">LSA Rep Theatre</div>
 					<a href="#" class="nav-item">T-Shirts</a>
 				</div>
-				<div class="intro-graphic">
-					<div class="cutout-container">
-						<div class="hamilton-cutout">
-						</div>
-						<span class="hamilton-title">
-							Hamilton
-						</span>
+				<div class="intro-graphic">	
+					<div class="hamilton-cutout">
 					</div>
-					<div class="scroll-hint-up">
+					<span class="hamilton-title">
+						Hamilton
+					</span>
+					<!--<div class="scroll-hint-up">
 						&#8963;
-					</div>
+					</div>-->
 				</div>
 			</div>
 			<div class="show-info">
