--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link rel='stylesheet' href='css/main.css'>        
 		<link rel='stylesheet' href='css/normalize.min.css'>        
 		<script src='js/vendor/modernizr-2.6.2.min.js'></script>
@@ -143,6 +144,10 @@
 						<div class="info-text text-center">
 							<hr>
 							For more information, call <a href="tel:1-813-827-6574">(813) 827-6574</a> or email our director at <a href="mailto:lsadirector@gmail.com">lsadirector@gmail.com</a>
+							<hr>
+							<a href="https://www.facebook.com/groups/274044615946672/"><i class="social-icon fa fa-facebook-official" aria-hidden="true"></i></a>
+							<a href="https://twitter.com/LsaRepTheatre"><i class="social-icon fa fa-twitter-square" aria-hidden="true"></i></a>
+							<a href="https://www.instagram.com/lsareptheatre/"><i class="social-icon fa fa-instagram" aria-hidden="true"></i></a>
 						</div>
 					</footer>
 				</div>
