--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Hamilton</title>
+        <meta name="description" content="LSA Repertory Theatre presents Hamilton: A multi-award-winning show by Lin-Manuel Miranda.">
+		<meta name="og:title" property="og:title" content="LSA Repertory Theatre presents: Hamilton">
+		<meta name="og:description" property="og:description" content="LSA Repertory Theatre presents Hamilton: A multi-award-winning show by Lin-Manuel Miranda.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -19,7 +21,7 @@
 			<div class="intro">
 				<div class="navbar">
 					<a href="#" class="nav-item">Tickets</a>
-					<div class="nav-item nav-item-focus">LSA Rep Theatre</div>
+					<a href="https://www.lsareptheatre.com" class="nav-item nav-item-focus">LSA Rep Theatre</a>
 					<a href="#" class="nav-item">T-Shirts</a>
 				</div>
 				<div class="intro-graphic">	
