--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="navbar">
 					<a href="#" class="nav-item">Tickets</a>
 					<a href="https://www.lsareptheatre.com" class="nav-item nav-item-focus">LSA Rep Theatre</a>
-					<a href="#" class="nav-item">T-Shirts</a>
+					<a href="https://www.customink.com/designs/hamilton/xmw0-00bk-jhmp/share?pc=EMAIL-40778&utm_campaign=shared%20design&utm_source=share%20link&utm_medium=shared%20design&utm_content=shared%20desktop" class="nav-item">T-Shirts</a>
 				</div>
 				<div class="intro-graphic">	
 					<div class="hamilton-cutout">
